# Pulse

./: .project  READ.md  package-lock.json  package.json
backend/java-server/: pom.xml
backend/java-server/src/main/resources/: application.yml
backend/rust-server/: .gitignore  Cargo.toml
backend/rust-server/src/: main.rs  models.rs  state.rs
backend/rust-server/src/handlers/: mod.rs  user_handler.rs  ws_handler.rs
backend/rust-server/src/utils/: id_generator.rs
docker/: docker-compose.yml  init.sql
pulse-web/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
pulse-web/src/: App.tsx  constants.tsx  types.ts
pulse-web/src/components/: ChatCard.tsx  LiveSpace.tsx  Sidebar.tsx  TaskBoard.tsx
pulse-web/src/hooks/: useChat.ts
pulse-web/src/services/: geminiService.ts
pulse-web/src/types/: index.ts
