[package]
name = "pulse-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
# 用於產生 ID
rs-snowflake = "0.6"
serde_json = "1.0.149"
